<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".MainActivity">
<LinearLayout
android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogin"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textSize="42sp">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:hint="@string/enteremail"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:textSize="26sp"
        android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM ">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/enterpassword"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:textSize="26sp">

    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvForgotPassword"
        android:text="@string/forgotpassword"
        android:layout_gravity="end"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp">

    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:background="@color/purple_500"
        android:layout_marginTop="18dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp">

    </Button>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/tvsignup"
        android:text="@string/signup"
        android:textSize="16sp"
        android:layout_marginTop="30dp">

    </TextView>
</LinearLayout>
</ScrollView>