<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv"
        android:text="@string/enter_details"
        android:textSize="24sp"
        android:layout_margin="10dp">

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et"
        android:hint="@string/enter_details"
        android:textSize="22sp"
        android:layout_margin="10dp">

    </EditText>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/cancel"
            android:layout_weight="1"
            android:id="@+id/btnCancel"
            android:layout_margin="10dp">

        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="1"
            android:id="@+id/btnOk"
            android:layout_margin="10dp">

        </Button>
    </LinearLayout>
</LinearLayout>
</layout>